Prevent long labels causing horizontal scrollbars

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -389,7 +389,7 @@ a:focus {
         display: inline-block;
 
         .label, .more {
-          position: absolute;
+          position: fixed;
           transform: translateX(-1vw);
           display: inline-block;
           visibility: hidden;
